// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <lodading> in crew stats section if no data 1`] = `
<h1>
  Loading
</h1>
`;

exports[`should render <lodading> in csst stats section if no data 1`] = `
<h1>
  Locading
</h1>
`;

exports[`should render cast stats section correctly if data provided 1`] = `
<div
  className="makeStyles-ratio-1"
>
  <h3
    className="MuiTypography-root makeStyles-header-2 MuiTypography-h5"
  >
    Cast gender balance:
  </h3>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    Female: 
    27
  </h6>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    Male: 
    51
  </h6>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    Not declared: 
    38
  </h6>
</div>
`;

exports[`should render crew stats section correctly if data provided 1`] = `
<div
  className="makeStyles-ratio-1"
>
  <h3
    className="MuiTypography-root makeStyles-header-2 MuiTypography-h5"
  >
    Crew gender balance:
  </h3>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    Female: 
    3
  </h6>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    Male: 
    2
  </h6>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    Not declared: 
    34
  </h6>
</div>
`;
